# face_register

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: auto-bump-and-release.yaml  auto-bump-and-release.yml  ci.yml  publish-release.yml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 10e24f287c7a_init_schema.py  7c341e510476_add_face_embeddings_table.py  9b70bcd0c868_save_image_into_blob_storage.py
app/api/: __init__.py  endpoints.py
app/api/routers/: face_comparison.py  face_embeddings.py  users.py
app/config/: settings.py
app/core/: arcface.py  model_factory.py  runtime.py  scrfd.py
app/core/models/: __init__.py  arcface.py  base.py  scrfd.py
app/crud/: face_embedding.py  user.py
app/database/: connection.py
app/models/: face_embedding.py  user.py
app/schema/: face_comparison.py  face_embedding.py  media.py  user.py
app/services/: face_comparison.py  face_enrollment.py  minio.py  qdrant.py
app/tests/: conftest.py  test_arcface.py  test_enroll_face.py  test_face_comparison.py  test_face_embeddings.py  test_scrfd.py  test_users.py
app/utils/: face_core.py  face_service.py  face_utils.py  logger.py
scripts/: dev-compose.sh  prod-compose.sh  test-compose.sh
src/: main.py
src/api/: endpoints.py
src/config/: settings.py
src/core/: scrfd.py
src/database/: connection.py
src/models/: user.py
src/schemas/: user.py
tests/: test_arcface.py  test_scrfd.py  test_users.py
(+5 files in other folders)
