[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face-register"
version = "0.1.0"
description = "A FastAPI application for managing user metadata with PostgreSQL database"
authors = [
    {name = "Face Register Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "minio==7.2.0",
    "numpy>=1.21.0",
    "opencv-python-headless>=4.8.0",
    "onnx>=1.13.0",
    "onnxruntime>=1.17.0",
    "scikit-image>=0.21.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
